syntax="proto3";
package basis.text_config;



message MysqlConfig {
    string url      = 1;
    string user     = 3;
    string passwd   = 4;
    string schema   = 5;
}

message RedisConfig {
    string url      = 1;
}

message LogConfig {
    string prefix   = 1;
    uint32 id       = 2;
    uint32 max      = 3;
    uint32 level    = 4;
}

message Config {
    string name         =   1;
    uint32 port         =   2;
    int32  idle_tmo_s   =   3;  // Connection will be closed if there is no read/write operations during me
    MysqlConfig mysql   =   4;
    RedisConfig redis   =   5;
    LogConfig log       =   6;
};
